@@ -8,6 +8,7 @@
 #define UTILS_H
 
 #include <algorithm>
+#include <regex>
 #include <string>
 #include <vector>
 
@@ -68,10 +69,14 @@ int read_file_to_string(std::string, std::string &);
 int write_to_file(std::string, const std::string &);
 void erase_lines_from_start(std::string &, int);
 void to_lower(std::string &);
-void str_extract_regex_occurances(std::string, const std::string, std::vector<std::string> &);
+void str_extract_regex_occurances(std::string, const std::regex &, std::vector<std::string> &);
 bool is_number(const std::string &);
 void decode_brace(const std::string &, std::vector<std::string> &);
 std::string join_vector_to_string(const std::vector<std::string> &, const std::string);
+bool str_match_wildcard(const std::string &, const std::string &);
+bool ends_with(const std::string &, const std::string &);
+bool starts_with(const std::string &, const std::string &);
+bool str_match_any_wildcard(const std::vector<std::string>&, const std::string &);
 
 /**
  * @brief Template function to check whether a vector contains the specified element
